--- a/translations/soul+intl-icu.fr.xlf
+++ b/translations/soul+intl-icu.fr.xlf
@@ -4178,5 +4178,16 @@
         <target>Ist diese Option aktiviert, abonnierst du automatisch allen Threads, die du selbst erstellt hast. Du kannst das Abonnement deiner Threads jederzeit manuell beenden.</target>
       </segment>
     </unit>
+    <unit id="sZZiEzn" name="Absender wählen">
+      <notes>
+        <note category="german">Absender wählen</note>
+        <note category="from">twig:///templates/ajax/pm/view.html.twig</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Absender wählen</source>
+        <target>Absender wählen</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
