--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -4162,7 +4162,6 @@
       <notes>
         <note category="german">Alle User</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig;twig:///templates/ajax/admin/users/listing_tabs.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Alle User</source>
@@ -4173,7 +4172,6 @@
       <notes>
         <note category="german">Account-Zustand</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Account-Zustand</source>
@@ -4184,7 +4182,6 @@
       <notes>
         <note category="german">Aktiv</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Aktiv</source>
@@ -4195,7 +4192,7 @@
       <notes>
         <note category="german">Dummy</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Dummy</source>
@@ -4206,7 +4203,6 @@
       <notes>
         <note category="german">Spezial</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Spezial</source>
@@ -4217,7 +4213,6 @@
       <notes>
         <note category="german">Zur Löschung vorgemerkt</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Zur Löschung vorgemerkt</source>
@@ -4228,7 +4223,6 @@
       <notes>
         <note category="german">Gelöscht</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Gelöscht</source>
@@ -4239,7 +4233,6 @@
       <notes>
         <note category="german">Inkarnation</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Inkarnation</source>
@@ -4250,7 +4243,6 @@
       <notes>
         <note category="german">Zuletzt aktiv</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Zuletzt aktiv</source>
@@ -4261,7 +4253,6 @@
       <notes>
         <note category="german">Hauptseele</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Hauptseele</source>
@@ -4272,18 +4263,16 @@
       <notes>
         <note category="german">Keine Hauptseele</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Keine Hauptseele</source>
-        <target>Ame non principale</target>
+        <target>Pas d'âme principale</target>
       </segment>
     </unit>
     <unit id="XiHvmIk" name="Verknüpfte Seele">
       <notes>
         <note category="german">Verknüpfte Seele</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Verknüpfte Seele</source>
@@ -4294,7 +4283,6 @@
       <notes>
         <note category="german">Beliebige verknüpfte Seele</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Beliebige verknüpfte Seele</source>
@@ -4305,7 +4293,6 @@
       <notes>
         <note category="german">Keine verknüpfte Seele</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Keine verknüpfte Seele</source>
@@ -4316,7 +4303,6 @@
       <notes>
         <note category="german">Accountbeschränkung</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Accountbeschränkung</source>
@@ -4327,7 +4313,6 @@
       <notes>
         <note category="german">Nicht bestätigt</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Nicht bestätigt</source>
@@ -4338,7 +4323,6 @@
       <notes>
         <note category="german">Nicht aktiv</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Nicht aktiv</source>
@@ -4349,7 +4333,6 @@
       <notes>
         <note category="german">Rolle</note>
         <note category="from">twig:///templates/ajax/admin/users/all_index.html.twig</note>
-        <note category="state">new</note>
       </notes>
       <segment>
         <source>Rolle</source>
