--- a/translations/game+intl-icu.en.xlf
+++ b/translations/game+intl-icu.en.xlf
@@ -8322,16 +8322,6 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
         <target>Building the All or Nothing has brought {def} temporary defence points to your town, but everything in the bank was destroyed. Here's hoping that it's enough...</target>
       </segment>
     </unit>
-    <unit id="OP561Ld">
-      <notes>
-        <note category="german">Resigniert und untröstlich sahen die Bürger, wie eine Horde von {num} Zombies sich in Richtung Stadt bewegte... Wie aus dem Nichts stand die Meute auf einmal vor dem Stadttor...</note>
-        <note category="from">db://LogEntryTemplate</note>
-      </notes>
-      <segment>
-        <source>Resigniert und untröstlich sahen die Bürger, wie eine Horde von {num} Zombies sich in Richtung Stadt bewegte... Wie aus dem Nichts stand die Meute auf einmal vor dem Stadttor...</source>
-        <target>The now visibly agitated citizens watched a horde of {num} zombies heading for the town!</target>
-      </segment>
-    </unit>
     <unit id="CoVKZbl" name="{sender}: {message}">
       <notes>
         <note category="german">{sender}: {message}</note>
@@ -23223,6 +23213,27 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       <segment>
         <source>&lt;strong&gt;Herzlichen Glückwunsch&lt;/strong&gt;, du hast Folgendes freigeschaltet: {list}</source>
         <target><![CDATA[<strong>Congratulations</strong>, you have unlocked: {list}]]></target>
+      </segment>
+    </unit>
+    <unit id=".ZhHPoH">
+      <notes>
+        <note category="german">Resigniert und untröstlich sahen die Bürger, wie eine Horde von {num} Zombies sich in Richtung Stadt bewegte...</note>
+        <note category="from">db://LogEntryTemplate</note>
+      </notes>
+      <segment>
+        <source>Resigniert und untröstlich sahen die Bürger, wie eine Horde von {num} Zombies sich in Richtung Stadt bewegte...</source>
+        <target>The now visibly agitated citizens watched a horde of {num} zombies heading for the town!</target>
+      </segment>
+    </unit>
+    <unit id="esTcUBp" name="Wie aus dem Nichts stand die Meute auf einmal vor dem Stadttor...">
+      <notes>
+        <note category="german">Wie aus dem Nichts stand die Meute auf einmal vor dem Stadttor...</note>
+        <note category="from">db://LogEntryTemplate</note>
+        <note category="state">new</note>
+      </notes>
+      <segment>
+        <source>Wie aus dem Nichts stand die Meute auf einmal vor dem Stadttor...</source>
+        <target>Wie aus dem Nichts stand die Meute auf einmal vor dem Stadttor...</target>
       </segment>
     </unit>
   </file>
