--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -8345,16 +8345,6 @@
         <target>La construcción Todo o Nada le ha dado {def} puntos de defensa al Pueblo. ¡Pero todos los objetos del almacén fueron destruidos! Esperemos que haya valido la pena...</target>
       </segment>
     </unit>
-    <unit id="OP561Ld">
-      <notes>
-        <note category="german">Resigniert und untröstlich sahen die Bürger, wie eine Horde von {num} Zombies sich in Richtung Stadt bewegte... Wie aus dem Nichts stand die Meute auf einmal vor dem Stadttor...</note>
-        <note category="from">db://LogEntryTemplate</note>
-      </notes>
-      <segment>
-        <source>Resigniert und untröstlich sahen die Bürger, wie eine Horde von {num} Zombies sich in Richtung Stadt bewegte... Wie aus dem Nichts stand die Meute auf einmal vor dem Stadttor...</source>
-        <target> ¡Alerta, algunos compañeros han visto una turba de {num} zombies dirigiéndose hacia el pueblo! Y de pronto, el horror se acrecienta frente al portal del pueblo...</target>
-      </segment>
-    </unit>
     <unit id="CoVKZbl" name="{sender}: {message}">
       <notes>
         <note category="german">{sender}: {message}</note>
@@ -23167,6 +23157,26 @@
       <segment>
         <source>&lt;strong&gt;Herzlichen Glückwunsch&lt;/strong&gt;, du hast Folgendes freigeschaltet: {list}</source>
         <target><![CDATA[<strong>Herzlichen Glückwunsch</strong>, du hast Folgendes freigeschaltet: {list}]]></target>
+      </segment>
+    </unit>
+    <unit id=".ZhHPoH">
+      <notes>
+        <note category="german">Resigniert und untröstlich sahen die Bürger, wie eine Horde von {num} Zombies sich in Richtung Stadt bewegte...</note>
+        <note category="from">db://LogEntryTemplate</note>
+      </notes>
+      <segment>
+        <source>Resigniert und untröstlich sahen die Bürger, wie eine Horde von {num} Zombies sich in Richtung Stadt bewegte...</source>
+        <target> ¡Alerta, algunos compañeros han visto una turba de {num} zombies dirigiéndose hacia el pueblo!</target>
+      </segment>
+    </unit>
+    <unit id="esTcUBp" name="Wie aus dem Nichts stand die Meute auf einmal vor dem Stadttor...">
+      <notes>
+        <note category="german">Wie aus dem Nichts stand die Meute auf einmal vor dem Stadttor...</note>
+        <note category="from">db://LogEntryTemplate</note>
+      </notes>
+      <segment>
+        <source>Wie aus dem Nichts stand die Meute auf einmal vor dem Stadttor...</source>
+        <target>Y de pronto, el horror se acrecienta frente al portal del pueblo...</target>
       </segment>
     </unit>
   </file>
